--- a/position_property/index.html
+++ b/position_property/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>demo-css</title>
-    <meta name="description" content="css-demo" />
+    <title>position_property</title>
+    <meta name="description" content="position_property" />
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,24 +19,34 @@
     />
   </head>
   <body>
-    <div id="root">
-      <h1>~/</h1>
-    </div>
+    <h1>Position Property</h1>
 
-    <section class="one">
-      <div id="files"><a href="selector_exercise/">Selector_Exercise</a></div>
+    <section id="static">
+      <h2>Static</h2>
+      <div></div>
+      <div id="middle"></div>
+      <div></div>
     </section>
 
-    <section class="two">
-      <div id="files"><a href="box_model/">Box_Model</a></div>
+    <section id="relative">
+      <h2>Relative</h2>
+      <div></div>
+      <div id="middle"></div>
+      <div></div>
     </section>
 
-    <section class="three">
-      <div id="files"><a href="the_very_basics/">The_Very_Basics</a></div>
+    <section id="absolute">
+      <h2>Absolute</h2>
+      <div></div>
+      <div id="middle"></div>
+      <div></div>
     </section>
 
-    <section class="fourth">
-      <div id="files"><a href="position_property/">Positions_Property</a></div>
+    <section id="fixed">
+      <h2>Fixed</h2>
+      <div></div>
+      <div id="middle"></div>
+      <div></div>
     </section>
   </body>
 </html>
