--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     </div>
 
     <section class="one">
-      <div id="files"><a href="selector_exercise/">Selector_Exercise</a></div>
+      <div><a href="selector_exercise/">Selector_Exercise</a></div>
     </section>
 
     <section class="two">
-      <div id="files"><a href="box_model/">Box_Model</a></div>
+      <div><a href="box_model/">Box_Model</a></div>
     </section>
 
     <section class="three">
-      <div id="files"><a href="the_very_basics/">The_Very_Basics</a></div>
+      <div><a href="the_very_basics/">The_Very_Basics</a></div>
     </section>
 
     <section class="fourth">
-      <div id="files"><a href="position_property/">Positions_Property</a></div>
+      <div><a href="position_property/">Positions_Property</a></div>
     </section>
   </body>
 </html>
