feat: edit HTML homepage

--- a/index.html
+++ b/index.html
@@ -23,20 +23,13 @@
       <h1>~/</h1>
     </div>
 
-    <section class="one">
-      <div><a href="selector_exercise/">Selector_Exercise</a></div>
-    </section>
-
-    <section class="two">
-      <div><a href="box_model/">Box_Model</a></div>
-    </section>
-
-    <section class="three">
-      <div><a href="the_very_basics/">The_Very_Basics</a></div>
-    </section>
-
-    <section class="fourth">
-      <div><a href="position_property/">Positions_Property</a></div>
-    </section>
+    <ul>
+      <li><a href="selector_exercise/" class="one">Selector_Exercise</a></li>
+      <li><a href="box_model/" class="two">Box_Model</a></li>
+      <li><a href="the_very_basics/" class="three">The_Very_Basics</a></li>
+      <li>
+        <a href="position_property/" class="fourth">Positions_Property</a>
+      </li>
+    </ul>
   </body>
 </html>
