refactor: rename page name convention to use dash

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>demo-css</title>
-    <meta name="description" content="css-demo" />
-    <link rel="stylesheet" href="index.css" />
+    <title>Demo CSS</title>
+    <meta name="description" content="Demo CSS" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="root">
@@ -24,11 +24,17 @@
     </div>
 
     <ul>
-      <li><a href="selector_exercise/" class="one">Selector_Exercise</a></li>
-      <li><a href="box_model/" class="two">Box_Model</a></li>
-      <li><a href="the_very_basics/" class="three">The_Very_Basics</a></li>
       <li>
-        <a href="position_property/" class="fourth">Positions_Property</a>
+        <a href="selector-exercise/" class="one">selector-exercise</a>
+      </li>
+      <li>
+        <a href="box-model/" class="two">box-model</a>
+      </li>
+      <li>
+        <a href="the-very-basics/" class="three">the-very-basics</a>
+      </li>
+      <li>
+        <a href="position-property/" class="fourth">Positions_Property</a>
       </li>
     </ul>
   </body>
