refactor: rename id selectors to class selectors

--- a/box-model/index.html
+++ b/box-model/index.html
@@ -19,23 +19,23 @@
     />
   </head>
   <body>
-    <div id="card">
+    <div class="card">
       <img alt="" src="https://assets.codepen.io/123865/dog.png" />
       <h1>I Am Dog</h1>
     </div>
-    <div id="one">
+    <div class="one">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni
       pariatur, odio voluptates esse veniam. Quos omnis, necessitatibus beatae
       architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus
       atque.
     </div>
-    <div id="two">
+    <div class="two">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni
       pariatur, odio voluptates esse veniam. Quos omnis, necessitatibus beatae
       architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus
       atque.
     </div>
-    <div id="three">
+    <div class="three">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni
       pariatur, odio voluptates esse veniam. Quos omnis, necessitatibus beatae
       architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus
