--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="root">
+    <div class="root">
       <h1>~/</h1>
     </div>
 
-    <ul>
-      <li>
-        <a href="selector-exercise/" class="one">selector-exercise</a>
-      </li>
-      <li>
-        <a href="box-model/" class="two">box-model</a>
-      </li>
-      <li>
-        <a href="the-very-basics/" class="three">the-very-basics</a>
-      </li>
-      <li>
-        <a href="position-property/" class="fourth">Positions_Property</a>
-      </li>
-    </ul>
+    <nav class="navigation">
+      <ul class="navigation-items">
+        <li>
+          <a href="selector-exercise/">Selector Exercise</a>
+        </li>
+        <li>
+          <a href="box-model/">Box Model</a>
+        </li>
+        <li>
+          <a href="the-very-basics/">The Very Basics</a>
+        </li>
+        <li>
+          <a href="position-property/">Positions Property</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
