--- a/selector-exercise/index.html
+++ b/selector-exercise/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>selector-exercise</title>
+    <title>Selector Exercise</title>
     <meta name="description" content="css-demo" />
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,12 +30,12 @@
       <a href="/donuts">donuts</a>
     </p>
 
-    <p id="dislikes">
+    <p class="dislikes">
       I hate eating <a href="/pickles">pickles</a> and
       <a href="/beets">beets</a>
     </p>
 
-    <div id="board">
+    <div class="board">
       <div class="square"></div>
       <div class="square"></div>
       <div class="square"></div>
