--- a/the-very-basics/index.html
+++ b/the-very-basics/index.html
@@ -21,10 +21,10 @@
   <body>
     <nav>
       <label for="search">Search</label>
-      <input type="text" placeholder="search" id="search" />
+      <input type="text" placeholder="search" class="search" />
       <input type="password" placeholder="password" />
       <button>Log In</button>
-      <button id="signup">Sign Up</button>
+      <button class="signup">Sign Up</button>
     </nav>
 
     <main>
