--- a/position-property/index.html
+++ b/position-property/index.html
@@ -21,31 +21,31 @@
   <body>
     <h1>Position Property</h1>
 
-    <section id="static">
+    <section class="static">
       <h2>Static</h2>
       <div></div>
-      <div id="middle"></div>
+      <div class="middle"></div>
       <div></div>
     </section>
 
-    <section id="relative">
+    <section class="relative">
       <h2>Relative</h2>
       <div></div>
-      <div id="middle"></div>
+      <div class="middle"></div>
       <div></div>
     </section>
 
-    <section id="absolute">
+    <section class="absolute">
       <h2>Absolute</h2>
       <div></div>
-      <div id="middle"></div>
+      <div class="middle"></div>
       <div></div>
     </section>
 
-    <section id="fixed">
+    <section class="fixed">
       <h2>Fixed</h2>
       <div></div>
-      <div id="middle"></div>
+      <div class="middle"></div>
       <div></div>
     </section>
   </body>
